Feat: move dragon spawns to Patchwork